--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -11,4 +11,8 @@
  * file per style scope.
  *
  *= require all
+ *= require fixes
+ *= require dataTables/jquery.dataTables.foundation
+ *= require jquery.treetable.theme.default
+ *= require foundation-icons
  */
