--- a/app/assets/javascripts/holders.js.erb
+++ b/app/assets/javascripts/holders.js.erb
@@ -1,5 +1,32 @@
 $(function () {
+
     $('.fdatepicker').fdatepicker({
       format: "<%= I18n.translate('datepicker-format') %>",
     });
+
+    var $checkoutForm = $(".admin-form").validate({
+        ignore: [],
+        rules : {
+            "holder[first_name]" : {
+                required : true
+            },
+            "holder[last_name]" : {
+                required : true
+            }
+        },
+
+        messages : {
+            "holder[first_name]" : {
+                required : "<%= I18n.translate('backend.mandatory_field')%>"
+            },
+            "holder[last_name]" : {
+                required : "<%= I18n.translate('backend.mandatory_field')%>"
+            }
+        },
+
+        errorPlacement : function(error, element) {
+            error.insertAfter(element);
+        }
+    });
+
 });
