--- a/app/views/holders/_position_fields.html.erb
+++ b/app/views/holders/_position_fields.html.erb
@@ -1,23 +1,20 @@
 <div class="nested-fields">
-
   <div class="row">
     <%= f.hidden_field :holder_id, :value => @holder.id %>
     <div class="small-2 columns">
       <%= f.text_field :from, value: (f.object.from.strftime(t('date.formats.short')) if f.object.from.present?), class: 'fdatepicker'%>
-
     </div>
     <div class="small-2 columns">
       <%= f.text_field :to, value: (f.object.to.strftime(t('date.formats.short')) if f.object.to.present?), class: 'fdatepicker'%>
     </div>
     <div class="small-3 columns">
-
       <%= f.text_field :title%>
     </div>
     <div class="small-3 columns">
-      <%= f.select( :area_id, @areas, {} ) -%>
+      <%= f.select( :area_id, @areas, {} ) %>
     </div>
     <div class="small-2 columns">
-      <%= link_to_remove_association "Remove holder", f, :class => "button tiny radius alert right" %>
+      <%= link_to_remove_association t('backend.delete'), f, :class => "button tiny radius alert right" %>
     </div>
   </div>
 </div>
