--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin</title>
-    <%= stylesheet_link_tag    "application" %>
+    <%= stylesheet_link_tag    "admin" %>
     <%= javascript_include_tag "admin", 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -26,10 +26,10 @@
       <div class="small-12">
         <div class="box">
           <div class="row">
-            <div class="small-12 large-2 columns">
+            <div class="small-12 large-3 columns">
               <%= render  'layouts/admin_sidebar' %>
             </div>
-            <div class="small-12 large-10 large-ofsset-1 columns mb40">
+            <div class="small-12 large-9 large-ofsset-1 columns mb40">
               <%= yield %>
             </div>
           </div>
