--- a/app/views/events/_attachment_fields.html.erb
+++ b/app/views/events/_attachment_fields.html.erb
@@ -1,15 +1,9 @@
 <div class="nested-fields">
-  <div class="small-12 columns">
     <div class="row">
+      <div class="small-4 columns"><%= f.text_field :title %></div>
+      <div class="small-6 columns"><%= f.file_field :file %></div>
       <div class="small-2 columns">
-        <%= f.text_field :title %>
-      </div>
-      <div class="small-2 columns">
-        <%= f.file_field :file %>
-      </div>
-      <div class="small-2 columns">
-        <%= link_to_remove_association "Remove holder", f, :class => "button tiny radius alert right" %>
+        <%= link_to_remove_association t('backend.delete'), f, :class => "button tiny radius alert right" %>
       </div>
     </div>
-  </div>
 </div>
