--- a/app/views/holders/index.html.erb
+++ b/app/views/holders/index.html.erb
@@ -23,26 +23,26 @@
     </tr>
     </tfoot>
     <tbody>
-    <% @holders.each do |h| %>
+    <% @holders.each do |holder| %>
         <tr>
           <td>
-            <p><%= link_to h.full_name_comma, holder_path(h) %></p>
+            <p><%= link_to holder.full_name_comma, holder_path(holder) %></p>
           </td>
           <td>
-            <strong><%= h.current_position.title %></strong><br />
-            <%= h.current_position.area.title %>
+            <strong><%= holder.current_position.title %></strong><br />
+            <%= holder.current_position.area.title %>
           </td>
           <td>
-            <% h.users.each do |u| %>
+            <% holder.users.each do |u| %>
                 <%= link_to u.full_name_comma, edit_user_path(u)  %><br />
             <% end %>
           </td>
           <td>
-            <%= link_to edit_holder_path(h), title: t('backend.edit') do %>
+            <%= link_to edit_holder_path(holder), title: t('backend.edit') do %>
               <i class="step fi-page-edit size-24"></i>
             <% end if can? :edit, Holder %>
 
-            <%= link_to holder_path(h), method: :delete, data: { confirm: t("backend.confirm") }, title: t('backend.delete') do%>
+            <%= link_to holder_path(holder), method: :delete, data: { confirm: t("backend.confirm") }, title: t('backend.delete') do%>
               <i class="step fi-page-delete size-24"></i>
             <% end if can? :delete, Holder%>
 
