--- a/app/views/visitors/headline/_holder.html.erb
+++ b/app/views/visitors/headline/_holder.html.erb
@@ -1,7 +1,8 @@
+<div class="small-4 large-3 columns">
+  <strong class="title-l mb20"></strong>
+</div>
 <div class="large-12 columns">
-  <p class="mt5">
-    <strong><%= t('main.results')%></strong> <%= t('main.with_keyword')%>
-    <span class="keywords"><strong><%= params[:keyword]%></strong></span>
-    <a id="delete-keywords" href="#"><span class="icon icon__delete"><%= t('main.delete')%></span></a>
+  <p class="mt10">
+    <%= t('main.events_for') %><strong> <%= link_to Holder.find(params[:holder]).full_name, current_url(params: {:holder => params[:holder]})  %></strong>
   </p>
 </div>
