--- a/app/views/holders/_position_fields.html.erb
+++ b/app/views/holders/_position_fields.html.erb
@@ -17,3 +17,4 @@
       <%= link_to_remove_association t('backend.delete'), f, :class => "button tiny radius alert right" %>
     </div>
   </div>
+</div>
