Public site pending issues

--- a/app/assets/javascripts/search_form.js.erb
+++ b/app/assets/javascripts/search_form.js.erb
@@ -31,4 +31,9 @@ $(function () {
       $('form').submit();
       $(this).remove();
     })
+
+    $('#search-order').on('change',function(e){
+      $('#order').val($(this).val());
+      $('form').submit();
+    });
 });
