--- a/app/views/visitors/headline/_last.html.erb
+++ b/app/views/visitors/headline/_last.html.erb
@@ -1,3 +1,3 @@
-<div class="large-12 columns">
-  <strong class="title-l mb20"><%= t("main.last_events")%></strong>
+<div class="small-12 columns mb10">
+  <p><strong class="result-l mb20"><%= t("main.last_events")%></strong></p>
 </div>
