--- a/app/views/visitors/index.csv.erb
+++ b/app/views/visitors/index.csv.erb
@@ -1,5 +1,5 @@
 <%- headers = ['Title', 'Location'] -%>
 <%= CSV.generate_line headers %>
-<%- @events.each do |event| -%>
+<%- @events.results.each do |event| -%>
     <%= CSV.generate_line([event.title, event.location]) %>
 <%- end -%>
