--- a/app/assets/stylesheets/all.css
+++ b/app/assets/stylesheets/all.css
@@ -6859,7 +6859,7 @@ th.next .fa {
 .title-l {
   color: black;
   font-size: 44px;
-  font-weight: 800;
+  font-weight: 700;
   line-height: 48px;
   font-family: 'Open Sans';
   display: block;
@@ -7097,3 +7097,62 @@ ul.pagination {
 
 button, a {
   outline: 0 !important; }
+
+.result-l {
+  font-family: 'Open Sans';
+  font-size: 44px;
+    font-weight: 700;
+    float: left;
+    padding-right: 10px;
+    line-height: 1;
+}
+.result-m {
+  font-family: 'Open Sans';
+  font-size: 24px;
+    font-weight: 700;
+    padding-right: 10px;
+}
+.title-l {
+  font-weight: 700;
+  margin-bottom: 70px;
+}
+select {
+  height: 3.1125rem;
+}
+.dib {
+  display: inline-block !important;
+}
+.filters-list {
+  margin-bottom: 20px;
+  padding: 15px 0;
+  display: block;
+  width: 100%;
+}
+.select-sm {
+  font-size: 12px;
+  height: 2rem;
+  padding: 3px;
+}
+.title-xs {
+  font-size: 12px;
+}
+
+
+@media only screen and (max-width: 40em) {
+  .result-l {
+    font-size: 20px;
+    float: none;
+  }
+  .result-m {
+    font-size: 20px;
+  }
+  .mb10 {
+    margin-bottom: 10px !important;
+  }
+  .title-l {
+    margin-bottom: 20px;
+  }
+  .dib.dn {
+    display: none !important;
+  }
+}
