--- a/app/views/visitors/show.html.erb
+++ b/app/views/visitors/show.html.erb
@@ -6,9 +6,9 @@
     <h2 class="post__title-big"><%= @event.title %></h2>
 
     <div class="row mb40">
-      <div class="small-2 large-1 columns"><a href="#"><span class="icon icon__share">Compartir</span></a></div>
-      <div class="small-2 large-1 columns"><a href="#"><span class="icon icon__email">Email</span></a></div>
-      <div class="small-2 large-1 columns"><a href="#"><span class="icon icon__feed">RSS</span></a></div>
+      <div class="small-2 large-2 columns">
+        <%= social_share_button_tag(@event.title) %>
+      </div>
       <div class="small-2 large-1 columns end"><a href="#"><span class="icon icon__print">Imprimir</span></a></div>
     </div>
 
