--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,7 @@
   <div class="row">
     <div class="small-12 columns hide-for-small-only">
       <div class="header__base">
-        <img class="header__imago" src="/assets/madrid.png" alt="¡Madrid">
+        <%= image_tag 'madrid.png', class: 'header__imago', alt:'¡Madrid'%>
         <h1 class="header__title"><strong>Gobierno abierto</strong> Transparencia</h1>
       </div>
     </div>
